tests/errors/compiler/float_in_condition/void_func_in_if.c
void func()
{

}

void main()
{
	if (func())
	{
		print("WTF?!");
	}
}
